--- a/repl/index.html
+++ b/repl/index.html
@@ -36,6 +36,6 @@
   </div>
   <div id="scroll"></div>
   
-  <script src='./dist/downloadFileWeb-repl.js'></script>
+  <script src='./dist/downloadar-repl.js'></script>
 </body>
 </html>
